Modify WhatsApp link with pre-filled order message
Updated WhatsApp link to include a pre-filled message.

--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
 
         <div class="links">
 
-            <a class="button" href="https://wa.me/62895393930680" target="_blank">
-                <i class="fa-brands fa-whatsapp"></i>
+        <a class="button" 
+    href="https://wa.me/62895393930680?text=Hallo Mimin + aku mau order + aplikasi editing mod + dan jasa editing min !" 
+   target="_blank">
+    <i class="fa-brands fa-whatsapp"></i>
                 WhatsApp
             </a>
 
